--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^5.5.1
+  firebase_core: ^3.8.1
 
 dev_dependencies:
   flutter_test:
