--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   cloud_firestore: ^5.5.1
   firebase_core: ^3.8.1
+  font_awesome_flutter: ^10.8.0
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
