--- a/airbnb/android/app/build.gradle
+++ b/airbnb/android/app/build.gradle
@@ -28,7 +28,14 @@ android {
     namespace = "com.example.airbnb"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
-
+        splits {
+        abi {
+            enable true
+            reset()
+            include 'x86_64', 'armeabi-v7a', 'arm64-v8a' // Ensure these ABIs match your target device/emulator
+            universalApk true // Optional: Generates a universal APK for all ABIs
+        }
+    }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
@@ -39,7 +46,8 @@ android {
         applicationId = "com.example.airbnb"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+       
+        minSdkVersion 23 
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
