--- a/airbnb/android/build.gradle
+++ b/airbnb/android/build.gradle
@@ -1,18 +1,20 @@
-dependencies {
-    classpath 'com.android.tools.build:gradle:7.1.2'
-    classpath 'com.google.gms:google-services:4.3.15'
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
 }
-
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
-dependencies {
-    classpath 'com.android.tools.build:gradle:7.1.2'
-    classpath 'com.google.gms:google-services:4.3.15'
-}
+
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
