--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   firebase_auth: ^5.3.4
   google_sign_in: ^6.2.2
+  another_carousel_pro: ^1.0.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
