--- a/airbnb/android/app/build.gradle
+++ b/airbnb/android/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id "com.google.gms.google-services"
+    id "com.google.gms.google-services"  // Ensure this is here
 }
 
 def localProperties = new Properties()
@@ -28,7 +28,7 @@ android {
     namespace = "com.example.airbnb"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
-        splits {
+    splits {
         abi {
             enable true
             reset()
@@ -42,12 +42,9 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        // Application ID should match the one in the Firebase console.
         applicationId = "com.example.airbnb"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-       
-        minSdkVersion 23 
+        minSdkVersion 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
@@ -55,9 +52,7 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.debug  // Use your release key here
         }
     }
 }
@@ -65,6 +60,9 @@ android {
 flutter {
     source = "../.."
 }
+
 dependencies {
-    implementation(platform("com.google.firebase:firebase-bom:33.6.0"))
+    implementation platform("com.google.firebase:firebase-bom:33.6.0")
+    implementation 'com.google.firebase:firebase-auth'  // Firebase Authentication
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'  // Google Sign-In
 }
