--- a/airbnb/android/build.gradle
+++ b/airbnb/android/build.gradle
@@ -1,16 +1,18 @@
 buildscript {
     repositories {
-        google()
+        google()  // Ensure Google's Maven repository is included
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
-        classpath 'com.google.gms:google-services:4.3.15'
+        // Use the latest version of the google-services plugin
+        classpath 'com.android.tools.build:gradle:8.7.0'
+        classpath 'com.google.gms:google-services:4.4.2'  // You can check if there is a newer version
     }
 }
+
 allprojects {
     repositories {
-        google()
+        google()  // Ensure Google's Maven repository is included
         mavenCentral()
     }
 }
@@ -18,8 +20,6 @@ allprojects {
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
