--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cached_network_image: ^3.4.1
   custom_info_window: ^1.0.1
   google_maps_flutter: ^2.10.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
