--- a/airbnb/android/app/build.gradle
+++ b/airbnb/android/app/build.gradle
@@ -40,6 +40,9 @@ android {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+    jvmTarget = "1.8" // Align with Java compatibility
+}
 
     defaultConfig {
         // Application ID should match the one in the Firebase console.
