--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   cached_network_image: ^3.4.1
   custom_info_window: ^1.0.1
   google_maps_flutter: ^2.10.0
+  chat_gpt_sdk: ^3.1.0
+  dash_chat_2: ^0.0.21
 
 dev_dependencies:
   flutter_test:
