--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_maps_flutter: ^2.10.0
   chat_gpt_sdk: ^3.1.0
   dash_chat_2: ^0.0.21
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
