--- a/airbnb/pubspec.yaml
+++ b/airbnb/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   chat_gpt_sdk: ^3.1.0
   dash_chat_2: ^0.0.21
   google_generative_ai: ^0.4.6
-    geolocator: ^13.0.2
+  geolocator: ^13.0.2
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
